--- a/assemble.html
+++ b/assemble.html
@@ -116,7 +116,7 @@
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
-        Spotify is a popular audio streaming and media services provider. The app offers a lot of different social features that distinguishes itself from other competitors and one of them is a collaborative playlist. The feature provides the ability to let your friends add their own tracks to your playlist. The collaborators can add or delete tracks at any time by dragging them into the playlist or pressing the delete button to remove them from the playlist; all the changes are visible on everyone’s copy of the playlist.
+        Spotify is a popular audio streaming and media services provider. The app offers a lot of different social features that distinguishes itself from other competitors and one of them is a collaborative playlist. The feature provides the ability to let your friends add their own tracks to your playlist. Collaborators can add or delete tracks at any time by dragging them into the playlist or pressing the delete button to remove them from the playlist; all the changes are visible on everyone’s copy of the playlist.
         <br>However, this feature is rarely used and most friends are not collaborating on a playlist. Users are not putting in the time to create playlists together.
         <br>The objective of this feature is to create an easy experience for users to stream everyone's choice of songs on one device in group settings.
       </div>
@@ -129,7 +129,7 @@
       <div class="small-process-title">Problem Space</div>
       <div class="main-step-title">Why does Spotify need this feature?</div>
           <div class="step-descriptionn">
-            Every time my friends and I are together, the music listening experience is mostly terrible. People argue over song sleections and whose music will be queued next. Making a collaborative playlist takes a lot of steps, and some users have no idea what they can do with the "make collaborative" button. Since you need more effort and time, users tend to be stressed about the social implications of the added songs. Moreover, this feature will help people test the waters before using collaborative playlists which stay in your library.
+            Every time my friends and I are together, the music listening experience is mostly terrible. People argue over song selections and whose music will be queued next. Making a collaborative playlist takes a lot of steps, and some users have no idea what they can do with the "make collaborative" button. Since you need more effort and time, users tend to be stressed about the social implications of the added songs. Moreover, this feature will help people test the waters before using collaborative playlists which stay in your library.
             <div class="step-descriptionn-img">
               <img src="img/music.png" alt="animated website imagery">
             </div>
@@ -151,7 +151,7 @@
 		<div class="storyline">
 				<div class="storyline-title">The Solution</div>
 				<div class="storyline-description">
-          The Assemble feature would allow users to create a group in which every member could add songs to and play from the same queue. Besides providing users with an easy collaborative music streaming experience, it would also help Spotify increase its social currency because more people would want to use spotify to be able to play their songs in a group setting. 
+          The Assemble feature would allow users to create a group in which every member could add songs to and play from the same queue. Besides providing users with an easy collaborative music streaming experience, it would also help Spotify increase its social currency because more people would want to use Spotify to be able to play their songs in a group setting. 
 				</div>
 		</div>
 		<div class="redesign-banner">
@@ -175,10 +175,10 @@
           <div class="break-down-title">Concept Testing</div>
           <div class="break-down-description">
             For the first step of my research, I chose 12 random users to participate in concept testing. For this test, I focused on discovering and making playlists & social features. I invited the 12 users to do three tasks:
-            <br>1.Discover a playlist of dance songs
-            <br>2.Create a new playlist called 'Dance Dance Music' and add a few songs from the playlist you discovered
-            <br>3.Invite a friend to collaborate on your playlist 'Dance Dance Music'
-            <br> <b>Result</b>- 8 out of 12 users failed to invite friends to collaborate on the playlist.
+            <br>1. Discover a playlist of dance songs
+            <br>2. Create a new playlist called 'Dance Dance Music' and add a few songs from the playlist you discovered
+            <br>3. Invite a friend to collaborate on your playlist 'Dance Dance Music'
+            <br> <b>Result</b>- 8 out of the 12 users failed to invite friends to collaborate on the playlist.
 
           </div>
         </div>
@@ -191,7 +191,7 @@
     <div class="break-down-title">User Pain Points</div>
     <div class="break-down-description">
         The following are the core problems this design aims to solve:
-        <br><b>Adding and deleting songs in the assemble feature</b> - Users need to be able to add and remove songs from a playlis when they are in close proximity to each other. This requires a bluetooth enabled device that will allow to detect the group queue.
+        <br><b>Adding and deleting songs in the assemble feature</b> - Users need to be able to add and remove songs from a playlist when they are in close proximity to each other. This requires a bluetooth enabled device that will allow to detect the group queue.
         <br><b>Adding and Removing Members</b>The admin should be able to add and remove members for the assembled group. The admin should also be able to give admin access to members.
         <br><b>View Names</b> - Just like in the collaborative playlist feature, the user should be able to view the songs and the names of users who added the song. 
         <br><b>Editing the Line Up</b>The users should be able to change the line up by dragging songs up/down to change their queue number.
@@ -215,7 +215,7 @@
               Organizing and grouping user flows for effecient navigation.
               <br>I decided to compare and contrast the current user flow of collaborative playlist with the user flow of the Assemble feature.
 
-              <br>I showed the paper prototype to the 12 participants and asked them to go through the entire process of going to the assemble button, creating an assemble or joining a group, adding songs to the group queue and managing the group (add/remove members & exit the group) on paper. 9 out of 12 participants were able to finish the task without asking any questions. 3 users had trouble giving admin access to the members. I further modified the admin access by allowing the admin to clicking on the user's name and switch between member and admin.
+              <br>I showed the paper prototype to the 12 participants and asked them to go through the entire process of going to the assemble button, creating an assemble or joining a group, adding songs to the group queue and managing the group (add/remove members & exit the group) on paper. 9 out of the 12 participants were able to finish the task without asking any questions. 3 users had trouble giving admin access to the members. I further modified the admin access by allowing the admin to click on the user's name and switch between member and admin.
           </div></div>
         </div>
 </div>
