--- a/cstem.html
+++ b/cstem.html
@@ -131,7 +131,7 @@
       <div class="small-process-title">Problem Space</div>
       <div class="main-step-title">Why is the current website design not working?</div>
           <div class="step-description">
-            The old site’s bad user experience has been a source of frustration for UC Davis students and faculty, so university administrators asked us to explore solutions to the site's problems. We conducted user research and used UC Davis style guides to inform our redesign, and validated our work using a final prototype, which we would present to a group of university stakeholders..
+            The old site’s bad user experience has been a source of frustration for UC Davis students and faculty, so university administrators asked us to explore solutions to the site's problems. We conducted user research and used UC Davis style guides to inform our redesign, and validated our work using a final prototype, which we would present to a group of university stakeholders.
             <div class="step-description-img">
               <img src="img/cstembreak.png" alt="animated website imagery">
             </div>
@@ -146,7 +146,7 @@
     <div class="text">
       <div class="small-text-title">Current Experience</div>
       <div class="current-experience-title">Why aren't users engaging with the online presence of this service?</div>
-      The current website deisgn lacks a good information architecture and overwhelms users with loads of information. In this quick demo, we can see that finding information is difficult because the navigation bar has no clear value path. Moreover, due to consistent updates, there are duplicate pages which would confuse users even more. 
+      The current website design lacks a good information architecture and overwhelms users with loads of information. In this quick demo, we can see that finding information is difficult because the navigation bar has no clear value path. Moreover, due to consistent updates, there are duplicate pages which would confuse users even more. 
     </div>
           <div class="current-experience-img">
             <img src="img/cstem.gif" alt="current CSTEM website experience gif">
@@ -166,9 +166,9 @@
 		<div class="storyline">
 				<div class="storyline-title">The Solution</div>
 				<div class="storyline-description">
-				We designed a set of new features within the JAPA app that supports a much wider range of needs. The new design takes new and returning users on a more controlled,
-				personalized journey and uses unique features such as the map quick look to list view, filtering, and garage level card swipe to guide drivers smoothly to their destination.
-				By integrating these features and mimicking the in-app journey to the external parking experience, JAPA creates a more full, guided experience for users and builds a more
+        We designed a set of new features within the CSTEM website that supports a much wider range of needs. The new design takes new and returning users on a more controlled,
+        personalized journey and uses unique features through the navigation bar that guides users smoothly to their destination.
+        By integrating these features and using the UC Davis branding, the new CSTEM website creates a more full, guided experience for users and builds a more
 				lasting relationship with them.
 				</div>
 		</div>
@@ -204,23 +204,17 @@
         <div class="break-down-text">
           <div class="break-down-title">Users and Personas</div>
           <div class="break-down-description">
-            To get more understand what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group.
-            The during the interviews we performed a contextual inquity (or walkthrough) of the website with our interviewees to observe how they used the site and what information they wanted to access. We also asked them both preestablished and followup questions about their goals and habits as users.
-            Based off of those interviews, we were able to create personas (who are fictional people with motivations and oppinions that average those of the people interviewed).
+            To get more understanding of what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group.
+            During the interviews, we performed a contextual inquity (or walkthrough) of the website with our interviewees to observe how they used the site and what information they wanted to access. We also asked them both pre-established and follow-up questions about their goals and habits as users.
+            Based off of those interviews, we were able to create personas (who are fictional people with motivations and opinions that average those of the people interviewed).
           </div>
         </div>
 
         <div class="final-gif">
-          <img src="images/JAPA/Prototyping/quick-look-gif.gif" alt="user personas">
+          <img src="img/userpersonas.png" alt="user personas">
         </div>
       </div>
 </div>
-
-
-<div class="breakk-down-text">
-<img src="images/JAPA/mid-section-img.png" alt="cstem img break">
-</div>
-
 
 <div class="break-down-container">
 	<div class="break-down-heading">
@@ -238,7 +232,7 @@
             <div class="break-down-description">
               Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
               <br><br>1. Where their final page destinations were on the sitemap
-              <br>2. What user navigation paths looked 
+              <br>2. What user navigation paths looked like
               <br>The person icons indicate the ending page for each of the personas' navigation paths.
           </div></div>
         </div>
@@ -254,7 +248,7 @@
     <div class="break-down-text">
       <div class="break-down-description">
         Our Revised Sitemap
-        <br>We wanted to make sure that all of our personas, especially the parents, could access their information quickly without having to read a lot of text. So we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
+        <br>We wanted to make sure that all of our personas, especially the parents, could access their information quickly without having to read a lot of text. Accordingly, we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
         <br>Since students are the majority of the user population, we made sure that all of the information that they need is within the “Curriculum” section because that’s where they tend to look first (based off of our interview observations). To do this, we regrouped and added some relevant pages to the section. Previously, the modules required another click but we have made all the information available in two clicks.
         <br>Moreover, we created a different navigation tab for partners that contains all the information that they would want to access, 
         <br>Downloads are also available in the first tab which was a special request from the center's stakeholders. 
@@ -270,12 +264,12 @@
 					<div class="break-down-title">Wireframes</div>
 					<div class="break-down-description">
             Overall, the information architecture created a cleaner path than the previous website design. This allowed us to move on to wireframing.
-            We created layouts based on user goals and UCD web patterns. After inserting and removing pages, and rearranging pages on the sitemap we were able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing UC Davis website patterns, but also entertained new ideas that could help the CSTEM website establish its own unique character.
-            During the wireframing process, we decided that using more modern UC Davis website’s design patterns would be the best layout choice for several reasons
+            We created layouts based on user goals and UCD web patterns. After inserting and removing pages, and rearranging pages on the sitemap, we were able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing UC Davis website patterns, but also entertained new ideas that could help the CSTEM website establish its own unique character.
+            During the wireframing process, we decided that using more modern UC Davis website design patterns would be the best layout choice for several reasons
             <br><br>The website would be consistent with modern UC Davis branding and style guides.
             The website experience would be consistent with other UC Davis sites; this would reduce users' effort to understand the redesigned site and would reduce their cognitive load.
             <br>Abiding by stylistic standards is important as the school continues to scale the number of websites that it has.
-            Examples of websites with modern UC Davis patterns would be the UC Davis home page and the UC Davis SISS website.
+            Examples of websites with modern UC Davis patterns would be the UC Davis home page and the UC Davis Global Affairs website.
 					</div>
         </div>
         <div class="finall-gif">
@@ -292,17 +286,12 @@
 	</div>
 
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
-					<img src="images/JAPA/Prototyping/search-gif.gif" alt="search location gif">
-					<img src="images/JAPA/Prototyping/filterfinal-gif.gif" alt="filter feature gif">
-				</div> -->
         <div class="break-down-row">
           <div class="breakk-down-text">
             <div class="break-down-title">Prototype</div>
             <div class="break-down-description">
-              Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
-              <br><br>1. Where their final page destinations were on the sitemap
-              <br>2. What user navigation paths looked 
+              After finalizing the ideas generated in the wireframes, we built our prototype. This prototype contains the pages relevant to each of the use cases since we would use it for subsequent usability tests.
+              <br> You can <b>click on the screen</b> and interact with the prototype below.
           </div></div>
         </div>
   </div>
@@ -318,10 +307,6 @@
 
 <div class="break-down-container">
 			<div class="break-down-row">
-				<!-- <div class="final-gif">
-					<img src="images/JAPA/Prototyping/driver-safety-gif.gif" alt="driver safety gif">
-				</div> -->
-
 				<div class="breakk-down-text">
 					<div class="break-down-title">Usability Testing</div>
 					<div class="break-down-description">
@@ -371,7 +356,7 @@
             <div class="breakk-down-text">
                   <div class="break-down-title">Exploring Implementation</div>
                   <div class="process-description">
-                    In an effort to understand why nthe website was so costly and time-consuming, I sat down with the Education Service Manager, Daniel Ryan. He helped me understand that the university uses a tool called Sitefarm to build it's websites, which houses templates and assets for creating sites, so a redesign that follows existing UC Davis patterns would be made easier through that resource.
+                    In an effort to understand why the website was so costly and time-consuming, I sat down with the Education Service Manager, Daniel Ryan. He helped me understand that the university uses a tool called Sitefarm to build it's websites, which houses templates and assets for creating sites, so a redesign that follows existing UC Davis patterns would be made easier through that resource.
 
                     Nevertheless, he estimates that with all of the information that would need to be migrated from the old website, the effort could easily take between 1 and 2 months and required good amount of capital.
     
@@ -389,9 +374,9 @@
                 <div class="breakk-down-text">
                       <div class="break-down-title">Thinking Forward</div>
                       <div class="process-description">
-                        Get user feedback while wireframing rather than making personal choices about the layout
-                        <br>Try to increase the number of participants in the interviews and usability tests to get more accurate results
-                        <br>Understand the hidden variables and obstacles between the project and its implementation by asking more questions to clients
+                        1. Get user feedback while wireframing rather than making personal choices about the layout.
+                        <br>2. Try to increase the number of participants in the interviews and usability tests to get more accurate results.
+                        <br>3. Understand the hidden variables and obstacles between the project and its implementation by asking more questions to clients.
         
                       </div>
                 </div>
