--- a/dhousing.html
+++ b/dhousing.html
@@ -133,7 +133,7 @@
       <div class="small-process-title">Problem Space</div>
       <div class="main-step-title">What is the current housing situation and why is it a problem?</div>
           <div class="step-description">
-            With Davis being a university town, the space is flooded with students looking for housing. The apartments are rented out in a cycle of succession of four years and there is a constant need of apartments.   
+            With Davis being a university town, the space is flooded with students looking for housing. The apartments are rented out in a cycle of succession of four years and there is a constant need for apartments.   
             Moreover, the locals in Davis want to find houses to rent or buy based on their personal parameters. Looking for housing is a tedious process. 
             People need to take out valuable time to look at multitudes of factors affecting their decision. Usually, this is a joint decision which makes it harder to communicate and come to a conclusion.
             <div class="step-description-img">
@@ -159,7 +159,7 @@
 
   <div class="opportunity-container">
     <div class="small-text-title">Space for opportunity</div>
-    <div class="problem-title">What if we focused on allowing customers to have an online walk-through experience especially due to COVID?</div>
+    <div class="problem-title">What if we focused on allowing customers to have an online walk-through experience especially given COVID?</div>
     Most housing-listing websites focus on listing housing with amenities and location. Since we wanted to do things a little different, we realized that we can utilize a social feature that allows users to communicate with each other. Moreover, we wanted to expand on this feature by incorporating an online walk-in view of the apartment listings. We encouraged apartments to add 360 photos that would allow users to have a real experience virtually. 
 </div>
 
@@ -171,8 +171,8 @@
 				<div class="storyline-description">
           We designed a set of new features within the website that supports a much wider range of needs. The new design takes new and returning users on a more controlled,
           personalized journey and uses unique features such as the map quick look to list view, filtering, and social features that allows users to share their likes, dislikes and even find potential roommates.
-          By integrating these features and re-designing the branding, Davis Housing creates a smooth and guided experience that improves their house-searching epxerience.
-          <br>I'm proud to say that, even after completing my internship, the design vision and insights that I helped develop are still being used by Davis Housing teams today.
+          By integrating these features and re-designing the branding, Davis Housing creates a smooth and guided experience that improves the user's house-searching experience.
+          <br>I'm proud to say that, even after completing my job, the design vision and insights that I helped develop are still being used by Davis Housing teams today.
 				</div>
 		</div>
 		<div class="redesign-banner">
