--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <div id="healthcave_image" class="module_image"></div>
             
                             <div class="module_description" id="healthcave_module_description" >
-                            <span class="project_module_text" id="healthcave_module_label">Health U App<br>UX Design<br>In Progress</span>
+                            <span class="project_module_text" id="healthcave_module_label">Health U App<br>UX Design<br>(In Progress)</span>
                             </div>
             
                         </div>
