--- a/dcc.html
+++ b/dcc.html
@@ -62,7 +62,7 @@
           <div id="project-date">April - May 2020</div>
           <div id="project-title">Designing A New Way to Serve the Design Community</div>
           <div id="project-description">
-            <a target=”_blank”  href = "https://designcareersclub.org/">Design Careers Club</a> is a registered student organisation that hosts student workshops, alumni events and design industry day.
+            <a target=”_blank”  href = "https://designcareersclub.org/">Design Careers Club</a> is a registered student organization that hosts student workshops, alumni events and design industry day.
           </div>
     </div>
 </div>
@@ -116,9 +116,9 @@
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
-        My team and I were challenged to design the website to serve the UC Davis Design Community. For the purpose of all the stakeholders, we planned and executed market research, user research, user testing, prototypes, visual design, and collaborated directly with the product manager and other stakeholders. The entire design department depends on the club to contact alumni and recruiters for the development of design students.
+        My team and I were challenged to design the website to best serve the UC Davis Design Community. For the purpose of all the stakeholders, we planned and executed market research, user research, user testing, prototypes, visual design, and collaborated directly with the product manager and other stakeholders. The entire design department depends on the club to contact alumni and recruiters for the development of design students.
             <br><br>
-            Our objective was to create a multi-purpose website that could continue for the course of the club. Since the club's leadership changes on an annual basis, we decided to use a website building platform such as weebly for the sake of longevity. We discussed coding the website from scratch and inviting developers to the team but this would have worked against the club and the objective of continued legacy of the website.
+            Our objective was to create a multi-purpose website that could continue for the course of the club. Since the club's leadership changes on an annual basis, we decided to use a website building platform such as Weebly for the sake of longevity. We discussed coding the website from scratch and inviting developers to the team but this would have worked against the club and the objective of a continued legacy for the website.
             <br><br>
             <b>My Role:</b> <br><br> As the President of the Design Careers Club, I designed the website with a talented team over the course of a quarter. Under the supervision of Professor Young, we created wireframes, addressed and considered user profiles, and implemented the best course of action for the club.
       </div>
@@ -129,11 +129,10 @@
 <div class="color-bg">
   <div class="problem-space-container">
       <div class="small-process-title">Problem Space</div>
-      <div class="main-step-title">Why does the organisation need a website?</div>
+      <div class="main-step-title">Why does the organization need a website?</div>
           <div class="step-description">
-            With Davis being a university town, the space is flooded with students looking for housing. The apartments are rented out in a cycle of succession of four years and there is a constant need of apartments.   
-            Moreover, the locals in Davis want to find houses to rent or buy based on their personal parameters. Looking for housing is a tedious process. 
-            People need to take out valuable time to look at multitudes of factors affecting their decision. Usually, this is a joint decision which makes it harder to communicate and come to a conclusion.
+            The organization needs a website as it is a bridge between students and alumni. We also cater to the design department faculty and design recruiters. The organization is an essential part of the department because it organizes annual events and quarterly workshops that are attended by industry professionals to give access to a diverse range of career opportunities. 
+            <br>Since, the organization is also funded by the department, it is important to have a professional online presence that gives an accurate representation of the club's goals and its impact.
             <div class="step-description-img">
               <img src="img/dccbreak.png" alt="animated website imagery">
             </div>
@@ -146,7 +145,7 @@
 <div class="opportunity-container">
   <div class="small-text-title">Space for opportunity</div>
   <div class="problem-title">What if we had a one-stop shop for all our user's needs?</div>
-  The club had no website which made it harder for us to reach our users about all the various things we were working on. Because of this, a lot of the students didn't know all the things that club was offering. Being scattered was hurting the organisation because the faculty also wanted easier access to all the opportunities and events. For that purpose, we wanted to create a cohesive websites with all different opportunities offered. Wanting to offer multiple variety of things expanded our user base. 
+  The club had no website which made it harder for us to reach our users about all the various things we were working on. Because of this, a lot of the students didn't know all the things that club was offering. Being scattered was hurting the organisation because the faculty also wanted easier access to all the opportunities and events. For that purpose, we wanted to create a cohesive website with all different opportunities offered. Wanting to offer multiple variety of things expanded our user base. 
 </div>
 
 
@@ -154,7 +153,7 @@
 		<div class="storyline">
 				<div class="storyline-title">The Solution</div>
 				<div class="storyline-description">
-        The solution was to create a responsive website which was not coded so that it could continue with the succession of club leadership. We decided to base our designs on user research and user analytics so that we can satisfy user needs and wants. Moreover, we decided to do usability testing to understand shortcomings so that the organisation can continue to work on the design and make it more efficient.
+        The solution was to create a responsive website which was not coded such that it could continue with the succession of club leadership. We decided to base our designs on user research and user analytics so that we can satisfy user needs and wants. Moreover, we decided to do usability testing to understand shortcomings so that the organisation can continue to work on the design and make it more efficient.
 				</div>
 		</div>
 		<div class="redesign-banner">
@@ -178,7 +177,7 @@
         <div class="break-down-text">
           <div class="break-down-title">Interviews</div>
           <div class="break-down-description">
-            To get more understanding of what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group. The during the interviews we performed a contextual inquity (or walkthrough) of the website with our interviewees to observe how they used the site and what information they wanted to access. We also asked them both preestablished and followup questions about their goals and habits as users.Based off of those interviews, we were able to create personas (who are fictional people with motivations and oppinions that average those of the people interviewed).
+            To get more understanding of what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group. The during the interviews we performed a contextual inquity (or walkthrough) of the website with our interviewees to observe how they used the site and what information they wanted to access. We also asked them both preestablished and followup questions about their goals and habits as users. Based of those interviews, we were able to create personas (who are fictional people with motivations and oppinions that average those of the people interviewed).
           </div>
         </div>
       </div>
@@ -243,8 +242,8 @@
                                     <div class="card-footer">
                                       <h5 class="card-title">Use Case:</h5>
                                       <ol>
-                                        <li>1. The website being <u>mobile friendly</u></li>
-                                        <li>Being able to access <u>information</u> easily </li>
+                                        <li>The website being <u>mobile friendly</u></li>
+                                        <li>Being able to access <u>information</u> easily</li>
                                       </ol>
                                     </div>
                                   </div>
@@ -273,7 +272,7 @@
                                   <div class="card-footer">
                                     <h5 class="card-title">Use Cases:</h5>
                                     <ol>
-                                      <li>The student information being available </li>
+                                      <li>The student information being available</li>
                                       <li>Connect with students and faculty</li>
                                     </ol>
                                   </div>
@@ -364,7 +363,7 @@
                 <p><b>Design Students:</b> This website will be used by the students to navigate design workshops, design events and job opportunities. They can also refer to the blog which will have professional articles such as preparing for the events.</p>
                 <p><b>Design Faculty:</b> The design faculty will have a similar goal of being aware of the events. They will also need to be able to get information on alumni and events from the previous years.</p>
                 <p><b>UC Davis Design Alumni:</b> The alumni will be connected to current design students through this website and will initially begin their mentorship program throught the website</p>
-                <p><b>Recruiters:</b> The recruiters will be encouraged to connect and emplow current design students that they meet at club events</p>
+                <p><b>Recruiters:</b> The recruiters will be encouraged to connect and employ current design students that they meet at club events</p>
                 <p><b>The DCC Board:</b> This website will need to be accessed and edited by the board members. They will maintain relevant information which requires editing to be easy and the site to work for longevity.</p>
           </div>
         </div></div>
@@ -377,9 +376,9 @@
         <div class="break-down-title">User Pain Points</div>
         <div class="break-down-description">
             The following are the core problems this design aims to solve:
-            <br>1.Publicize job opportunities and professional workshops
-            <br>2.Connect design students and alumni through the mentorship program
-            <br>3.Promote the club's events and newsletter
+            <br>1. Publicize job opportunities and professional workshops
+            <br>2. Connect design students and alumni through the mentorship program
+            <br>3. Promote the club's events and newsletter
               </div></div>
       </div></div>
 
@@ -400,10 +399,10 @@
 
                 <br>Since the organization of information on the website was an issue brought up in our personas, we wanted to take a look at the persona use cases and see:
                 
-                <br>Where their final page destinations were on the sitemap
-                <br>What user navigation paths looked
-                <br> The person icons indicate the ending page for each of the personas' navigation paths.
-                We wanted to make sure that all of our personas, especially the international students, could access their information quickly without having to read a lot of text. So we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
+                <br>1. Where their final page destinations were on the sitemap
+                <br>2. What user navigation paths looked
+                <br>3. The person icons indicate the ending page for each of the personas' navigation paths.
+                <br><br>We wanted to make sure that all of our personas, especially the international students, could access their information quickly without having to read a lot of text. So we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
             </div></div>
         </div>
 
@@ -471,7 +470,7 @@
     <div class="break-down-row">
       <div class="breakk-down-text">
         <div class="break-down-title">Looking Forward</div>
-          In the end, the succession of leadership is responsible for the continuation of the website. We took on the responsibility of creating the website based on user research. We still feel that the organisation should do a lot more research into design systems because there was an overwhelming number of synonymous design patterns for club organisations. Moreover, we would have preferred to code the website as we had the skills but unfortunately we decided to go with Weebly so that it is easy to edit for the future board members. We think that the website will benefit from being coded and hosted. The interaction and animation will improve the website. It is important to understand the limits and parameters of a project and we respected the criterion.
+          In the end, the succession of leadership is responsible for the continuation of the website. We took on the responsibility of creating the website based on user research. We still feel that the organisation should do a lot more research into design systems because there was an overwhelming number of synonymous design patterns for club organisations. Moreover, we would have preferred to code the website as we had the skills but unfortunately we decided to go with Weebly so that it is easy to edit for the future board members. We think that the website will benefit from being coded and hosted as the interaction and animation will improve the website. However, it is important to understand the limits and parameters of a project and we respected the criterion.
       </div>
     </div></div>
 
