--- a/uipsych.html
+++ b/uipsych.html
@@ -61,7 +61,7 @@
           <div id="project-date">November 2019</div>
           <div id="project-title">Improving UI Skills with Digital Psychology Methods</div>
           <div id="project-description">
-            Researching <a target=”_blank” style="color:#8A2BE2;">digital psychology</a> which is a mix of behavioral economics and psychology and improving my UI features based off this information. I have based this study on different kinds of tactics used to convince users to behave in a specific manner to achieve the goals of the organisation.
+            Researching <a target=”_blank” style="color:#8A2BE2;">digital psychology</a> , which is a mix of behavioral economics and psychology, and improving my UI features based off this information. I have based this study on different kinds of tactics used to convince users to behave in a specific manner to achieve the goals of the organisation.
           </div>
     </div>
 </div>
@@ -115,7 +115,7 @@
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
-        Digital Psychology (also known as web psychology) takes a different approach.  It looks at online behaviour through the lens of psychology and behavioral economics – and through this lens, explains why customers are acting the way they are.  Better still, by applying the lessons learnt from social science theory, we’re able to remove barriers to online conversion, and increase customer spend and retention.
+        Digital Psychology (also known as web psychology) takes a different approach. It looks at online behaviour through the lens of psychology and behavioral economics – and through this lens, explains why customers are acting the way they are. Better still, by applying the lessons learned from social science theory, we’re able to remove barriers to online conversion, and increase customer spend and retention.
         <br><br>
         <b>The main objectives:</b> <br><br> 1) Research digital psychology principles and its applicabilty in designs
         <br> 2) Create UI animations based on digital psychology principles 
@@ -167,7 +167,7 @@
 
       <div class="break-down-row">
         <div class="final-gif">
-          <iframe width="500" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FluzdpcHFkV0v7wAyOgbRIF%2FUntitled%3Fnode-id%3D1%253A2%26scaling%3Dscale-down" alt="loss aversion prototype"></iframe>
+          <iframe width="500" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FluzdpcHFkV0v7wAyOgbRIF%2FLoss-Aversion%3Fnode-id%3D1%253A2%26scaling%3Dscale-down"  alt="loss aversion prototype"></iframe>
         </div>
 
         <div class="break-down-text">
@@ -186,7 +186,7 @@
         <div class="break-down-text">
           <div class="break-down-title">Social Proof</div>
           <div class="break-down-description">
-            The digital age has given people the ability to share their opinion on products and services. Thanks to sites like Yelp, people explore new cities with the help of reviews online. Social proof is a psychological and social phenomenon wherein people copy the actions of others in an attempt to undertake behavior in a given situation. This principle online allows customers to aussme that the actions of others represent the correct course of action.
+            The digital age has given people the ability to share their opinion on products and services. Thanks to sites like Yelp, people explore new cities with the help of reviews online. Social proof is a psychological and social phenomenon wherein people copy the actions of others in an attempt to undertake behavior in a given situation. This principle online allows customers to assume that the actions of others represent the correct course of action.
             <br> I used a yellow and orange branding since those colors make you hungry. (AWG Sales Services)
           </div>
         </div>
@@ -207,7 +207,7 @@
     <div class="break-down-text">
       <div class="break-down-title">Perceived Value</div>
       <div class="break-down-description">
-        A common digital psycholoy principle is to combine products to save on the total cost. We’ve all seen promotions like this: a new shirt costs $40, a new tie costs $20, but the shirt and tie combo is $50 (a $10 savings). This is actually a deal, assuming you want both items, and sets the framework for the “value” of items.
+        A common digital psychology principle is to combine products to save on the total cost. We’ve all seen promotions like this: a new shirt costs $40, a new tie costs $20, but the shirt and tie combo is $50 (a $10 savings). This is actually a deal, assuming you want both items, and sets the framework for the “value” of items.
         People want to get a deal, so retailers will take advantage of this. They will group items together and list them for one price. That singular price is not a bargain at all, it’s the regular cost of all items. However, listing multiple items at one cost will increase the perceived value of the package as a whole. Amazon does this all the time with their “frequently bought together.”
       </div>
       </div>
