--- a/assemble.html
+++ b/assemble.html
@@ -191,10 +191,10 @@
     <div class="break-down-title">User Pain Points</div>
     <div class="break-down-description">
         The following are the core problems this design aims to solve:
-        <br><b>Adding and deleting songs in the assemble feature</b> - Users need to be able to add and remove songs from a playlist when they are in close proximity to each other. This requires a bluetooth enabled device that will allow to detect the group queue.
-        <br><b>Adding and Removing Members</b>The admin should be able to add and remove members for the assembled group. The admin should also be able to give admin access to members.
+        <br><br><b>Adding and deleting songs in the assemble feature</b> - Users need to be able to add and remove songs from a playlist when they are in close proximity to each other. This requires a bluetooth enabled device that will allow to detect the group queue.
+        <br><b>Adding and Removing Members</b> - The admin should be able to add and remove members for the assembled group. The admin should also be able to give admin access to members.
         <br><b>View Names</b> - Just like in the collaborative playlist feature, the user should be able to view the songs and the names of users who added the song. 
-        <br><b>Editing the Line Up</b>The users should be able to change the line up by dragging songs up/down to change their queue number.
+        <br><b>Editing the Line Up</b> - The users should be able to change the line up by dragging songs up/down to change their queue number.
           </div></div>
   <div class="finall-gif">
     <img src="img/flyingiphone-explored.png" alt="redesign iphone">
