--- a/cstem.html
+++ b/cstem.html
@@ -340,7 +340,7 @@
                 <br><br>1. Changing the site is a lot of work and will require a team of developers
                 <br>2. Changing the site will force people who are used to using the site to relearn the new site
 
-                <br><br>Regardless, it’s a little bit disappointing to see progress hindered by matters that had not been considered. Nevertheless, I am grateful for this complication, because there are lessons here that a lot of students don’t get to learn about in more ordinary projects.
+                <br><br>  This gave us a glimpse into the real world where research efforts may not always be financially viable. It was a little bit disappointing to see progress hindered by such matters, but I am still grateful to have gotten the opportunity to learn from this experience. While, it hasn't been implemented yet, there is hope for the future where this research and prototype will be useful.
 
               </div>
         </div>
