--- a/dcc.html
+++ b/dcc.html
@@ -95,7 +95,7 @@
 					<div class="detail-container">
 							<div class="detail-title">Team</div>
 							<div class="emoji-img">👫</div>
-							<div class="details-description">Professor Jyayi Young<br>Nehal Jain<br>Sarrah Solomon
+							<div class="details-description">Prof. Jyayi Young<br>Nehal Jain<br>Sarrah Solomon
 							</div>
 					</div>
 		</div>
@@ -116,7 +116,7 @@
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
-        My team and I were challenged to design the website to best serve the UC Davis Design Community. For the purpose of all the stakeholders, we planned and executed market research, user research, user testing, prototypes, visual design, and collaborated directly with the product manager and other stakeholders. The entire design department depends on the club to contact alumni and recruiters for the development of design students.
+        My team and I were challenged to design the website to best serve the UC Davis Design Community. For the purpose of meeting the stakeholder's stipulations, we planned and executed market research, user research, user testing, prototypes, visual design, and collaborated directly with the product manager. The entire design department depends on the club to contact alumni and recruiters for the development of design students.
             <br><br>
             Our objective was to create a multi-purpose website that could continue for the course of the club. Since the club's leadership changes on an annual basis, we decided to use a website building platform such as Weebly for the sake of longevity. We discussed coding the website from scratch and inviting developers to the team but this would have worked against the club and the objective of a continued legacy for the website.
             <br><br>
@@ -177,7 +177,7 @@
         <div class="break-down-text">
           <div class="break-down-title">Interviews</div>
           <div class="break-down-description">
-            To get more understanding of what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group. The during the interviews we performed a contextual inquity (or walkthrough) of the website with our interviewees to observe how they used the site and what information they wanted to access. We also asked them both preestablished and followup questions about their goals and habits as users. Based of those interviews, we were able to create personas (who are fictional people with motivations and oppinions that average those of the people interviewed).
+            To get more understanding of what these users’ goals and pain points on the site were, we conducted more in-depth interviews where we would walk through the website with 5 people from each user group. We asked them both preestablished and followup questions about their goals and habits as users. Based of those interviews, we were able to create personas (who are fictional people with motivations and oppinions that average those of the people interviewed).
           </div>
         </div>
       </div>
