--- a/dhousing.html
+++ b/dhousing.html
@@ -150,7 +150,7 @@
     <div class="text">
       <div class="small-text-title">Current Experience</div>
           <div class="current-experience-title">Why aren't users engaging with the online presence of this service?</div>
-          This is what the current website experience looks like. In this quick demo, we can see that the davis housing website is in desperated need of a redesign. It is wasting important space and not giving any real information but lists of the apartments. Moreover, the current color scheme and logo is off-brand. 
+          This is what the current website experience looks like. In this quick demo, we can see that the davis housing website is in desperate need of a redesign. It is wasting important space and not giving any real information but lists of the apartments. Moreover, the current color scheme and logo is off-brand. 
         </div>
               <div class="current-experience-img">
                 <img src="img/dh.gif" alt="current davis housing experience gif">
