--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <!-- My Styles -->
         <link rel="stylesheet" href="styles/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&display=swap" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Exo+2:500i|Open+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700|Titillium+Web:400,600,700" rel="stylesheet">
-      
+       -->
 
         <!-- Add meta viewport tag needed for mobile devices -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -234,6 +234,7 @@
             <a target="_blank"href="https://www.linkedin.com/in/nehalj98/"><i class="fab fa-linkedin-in"></i></a>
             <a href="mailto:nnjain@ucdavis.edu"><i class="fas fa-envelope"></i></a>
             </div>
+            <div class="is-content"><div data-content-for="xl"><h3 style="text-align: center; font-size: 0.9rem; padding-top:0.5%; padding-bottom:1%;" data-mce-style="text-align: center; font-size: 0.777778rem;"><span class="font_acg6rwb1e">© Nehal Jain 2020</span></h6></div></div>
         </footer>
         
         <!-- Custom JS -->
