--- a/uipsych.html
+++ b/uipsych.html
@@ -61,7 +61,7 @@
           <div id="project-date">November 2019</div>
           <div id="project-title">Improving UI Skills with Digital Psychology Methods</div>
           <div id="project-description">
-            Researching <a target=”_blank” style="color:#8A2BE2;">digital psychology</a> , which is a mix of behavioral economics and psychology, and improving my UI features based off this information. I have based this study on different kinds of tactics used to convince users to behave in a specific manner to achieve the goals of the organisation.
+            Researching <a target=”_blank” style="color:#8A2BE2;">digital psychology</a> , which is a mix of behavioral economics and psychology, and improving my UI features based of this information. I have based this study on different kinds of tactics used to convince users to behave in a specific manner to achieve the goals of the organisation.
           </div>
     </div>
 </div>
@@ -143,7 +143,7 @@
     <div class="text">
       <div class="small-text-title">Current Experience</div>
           <div class="current-experience-title">Is digital psychology unethical?</div>
-            Cyberpsychologists often deal with moral issues and dilemmas. These range from the daily awareness of distributive justice, as they consider the imbalanced allocation of technologies in society, to discussing and balancing the complex issues involved in research. These situations are often challenging and some quite perplexing. Some of these situations can be seen in popular social media sites and apps. For example, facebook’s principal approach to revenue generation violates the ethical principle of privacy.Our technologies are progressively developing into algorithmic devices that seamlessly interface with digital personhood. If people are intimately linked to their technologies, then removing or damaging the technology could be tantamount to a personal attack. On the other hand, algorithmic devices may threaten autonomy and privacy. 
+            Cyberpsychologists often deal with moral issues and dilemmas. These range from the daily awareness of distributive justice, as they consider the imbalanced allocation of technologies in society, to discussing and balancing the complex issues involved in research. These situations are often challenging and some quite perplexing. Some of these situations can be seen in popular social media sites and apps. For example, facebook’s principal approach to revenue generation violates the ethical principle of privacy. Our technologies are progressively developing into algorithmic devices that seamlessly interface with digital personhood. If people are intimately linked to their technologies, then removing or damaging the technology could be tantamount to a personal attack. On the other hand, algorithmic devices may threaten autonomy and privacy. 
         </div>
 
         <div class="current-experience-img">
@@ -245,7 +245,7 @@
   <div class="break-down-title">Scarcity</div>
   <div class="break-down-description">
     This tactic relies on the concept of scarcity and the idea that people want to obtain the unobtainable. Marketers using this concept will advertise the limited quantities of an item or a high volume of people trying to obtain the item.
-    Similar to loss aversion, scarcity may demonstrates the realities of not obtaining a product before supplies run out.
+    Similar to loss aversion, scarcity demonstrates the realities of not obtaining a product before supplies run out.
   </div>
 </div>
 </div>
