--- a/cstem.html
+++ b/cstem.html
@@ -115,7 +115,7 @@
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
-        The UC Davis CStem website is one of the most visited university websites. The site has a lot of different users, but is especially relevant to the 30,000+ K-12 student population that use the site at some point in their robotic and coding career as it contains all the information about the program requirements. Unfortunately, as you will see in the "Personas" section of this case study, users find the site unappealing and are often unable to find the information that they need. As a result, both students and faculty are frustrated with the poor web experience.
+        The UC Davis CStem website is one of the most visited university websites. The site has a lot of different users, but is especially relevant to the 30,000+ K-12 student population that use the site at some point during their robotic and coding career as it contains all of the information about the program's requirements. Unfortunately, as you will see in the "Personas" section of this case study, users find the site unappealing and are often unable to find the information that they need. As a result, both students and faculty are frustrated with the poor web experience.
         <br><br>
         <b>The objective:</b> <br><br> My student team was tasked with gathering data about the site’s users, and came up with mockups to explore what a redesigned site might look like. Our objective was to redesign a multi-purpose website that would achieve the center's goal and serve user efficiently.
         <br><br>
@@ -250,7 +250,7 @@
         Our Revised Sitemap
         <br>We wanted to make sure that all of our personas, especially the parents, could access their information quickly without having to read a lot of text. Accordingly, we restructured the site to facilitate the access of information from the use cases, (the information that they desired most).
         <br>Since students are the majority of the user population, we made sure that all of the information that they need is within the “Curriculum” section because that’s where they tend to look first (based off of our interview observations). To do this, we regrouped and added some relevant pages to the section. Previously, the modules required another click but we have made all the information available in two clicks.
-        <br>Moreover, we created a different navigation tab for partners that contains all the information that they would want to access, 
+        <br>Moreover, we created a different navigation tab for <i>Partners</i>. The tab contains all the information that they would want to access.
         <br>Downloads are also available in the first tab which was a special request from the center's stakeholders. 
         <br>The news and events were also cleanly categorized under one nav tab which allows for a smoother user experience.
       </div>
@@ -263,12 +263,11 @@
 				<div class="break-down-text">
 					<div class="break-down-title">Wireframes</div>
 					<div class="break-down-description">
-            Overall, the information architecture created a cleaner path than the previous website design. This allowed us to move on to wireframing.
+            <br>Overall, the information architecture created a cleaner path than the previous website design. This allowed us to move on to wireframing.
             We created layouts based on user goals and UCD web patterns. After inserting and removing pages, and rearranging pages on the sitemap, we were able to start sketching new website layouts. As we sketched and wireframed, we explored layouts that followed existing UC Davis website patterns, but also entertained new ideas that could help the CSTEM website establish its own unique character.
-            During the wireframing process, we decided that using more modern UC Davis website design patterns would be the best layout choice for several reasons
+            During the wireframing process, we decided that using more modern UC Davis website design patterns would be the best layout choice for several reasons.
             <br><br>The website would be consistent with modern UC Davis branding and style guides.
-            The website experience would be consistent with other UC Davis sites; this would reduce users' effort to understand the redesigned site and would reduce their cognitive load.
-            <br>Abiding by stylistic standards is important as the school continues to scale the number of websites that it has.
+            The website experience would be consistent with other UC Davis sites; this would reduce users' effort to understand the redesigned site and would reduce their cognitive load. Abiding by stylistic standards is important as the school continues to scale the number of websites that it has.
             Examples of websites with modern UC Davis patterns would be the UC Davis home page and the UC Davis Global Affairs website.
 					</div>
         </div>
