--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
            <div id= cover><div id="cover-image"></div></div>
             <div id="header_text" >    
                 <h2>Hello! <span style="color:#eabb97;">I'm Nehal</span>.</h2>
-                <p style="font-size: 20px;">I’m a UX designer who is passionate about solving complex problems and creating meaningful visual storytelling.</p></div>
+                <p style="font-size: 20px;">I’m a product designer who is passionate about solving complex problems through the intersection of technology and business.</p></div>
             </div>
 
 
